2008-11-22  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Rename "Open Waveform" to "Open Waveform From File".

2008-11-22  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	Add file filter "Waveform & Media" (default).

2008-11-22  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Add action "Generate Wavefrom From Video". Don't reload the player if the
	file is the same.

2008-11-22  kitone  <kitone@gna.org>

	* src/player.h:
	* src/vp/gstreamerplayer.cc:
	* src/vp/gstreamerplayer.h:
	Add function get_uri.

2008-11-22  kitone  <kitone@gna.org>

	* plugins/actions/joindocument/joindocument.cc:
	Move subtitles added after the last original subtitle.

2008-11-20  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/toolongdisplaytime.h:
	* plugins/actions/errorchecking/tooshortdisplaytime.h:
	Remove ngettext for gettext.

2008-11-17  kitone  <kitone@gna.org>

	* src/we/waveformrenderergl.cc:
	Fix: Restore header <gl/gl.h> to <GL/gl.h>.

2008-11-16  kitone  <kitone@gna.org>

	* all files {h,cc}:
	convert all files to lowercase.

2008-11-16  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/cfg.cc:
	* src/cfg.cc:
	Rename file Config to cfg.

	* src/CommandSystem.cc:
	* src/Config.cc:
	* src/Config.h:
	* src/Document.cc:
	* src/Encodings.cc:
	* src/ExtensionManager.cc:
	* src/SubtitleView.cc:
	* src/SubtitleView.h:
	* src/extension/Action.h:
	* src/gui/ComboBoxEncoding.cc:
	* src/gui/ComboBoxVideo.cc:
	* src/gui/DialogCharacterCodings.cc:
	* src/gui/MenuBar.h:
	* src/utility.cc:
	* src/widget_config_utility.cc:
	Update with new cfg filename.

2008-11-16  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/Signal.cc:
	* src/Signal.h:
	Remove files Signal.

	* src/Document.cc:
	* src/Document.h:
	Add Signal code.

	* src/i18n.h:
	* src/utility.h:
	Fix: config header.

2008-11-16  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/i18n.h: