@@ -64,8 +64,7 @@
 		<menu action="menu-tools">
 			<placeholder name="find-and-replace"/>
 			<separator/>
-			<placeholder name="spell-checking"/>
-			<placeholder name="error-checking"/>
+			<placeholder name="checking"/>
 			<separator/>
 			<placeholder name="split-document"/>
 			<placeholder name="join-document"/>
