@@ -1,5 +1,12 @@
 2008-11-22  kitone  <kitone@gna.org>
 
+	* plugins/actions/errorchecking/errorcheckingplugin.cc:
+	* plugins/actions/spellchecking/spellchecking.cc:
+	* share/menubar.xml:
+	Add placeholder 'checking'.
+
+2008-11-22  kitone  <kitone@gna.org>
+
 	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
 	Rename "Open Waveform" to "Open Waveform From File".
 
